navbar mobile screen z-index fix

--- a/src/components/Navbar/Navbar.styles.scss
+++ b/src/components/Navbar/Navbar.styles.scss
@@ -45,6 +45,7 @@
 }
 
 .navbar__contents__sm__container {
+  z-index: 3;
   position: absolute;
   left: 0;
   right: 0;
